# edgecar-messages

./: Dockerfile  README.md  docker_setup.sh  run_ai_module.sh
catkin_ws/src/edgecar_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/edgecar_msgs/msg/: WheelsCmdStamped.msg
